# Capstone

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
csv/: MOCK_DATA.csv  convertcsv.csv  latest.csv  moviedata.csv
src/: lib.rs  main copy.rs  main.rs  request.rs
webpage-resources/: filterCsv.js  importCsv.js  loadCsv.js  modal.js  movieInfo.js  newMovie.js  server.js  style.css  test.js  updateCsv.js  uploadMovie.js
