[package]
name = "freakstone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
csv = "1.1"
chrono = "0.4.38"
reqwest = "0.12.5"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1"
tokio = { version = "1.38.0", features = ["rt","macros"] }
tokio-macros = "2.3.0"
url = "2.5.2"
yew = {version = "0.21.0", features = ["csr"]}

[profile.release]
lto = true
