    [package]
    name = "freakstone"
    version = "0.1.0"
    edition = "2021"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

    [lib]
    crate-type = ["cdylib", "rlib"]

    [dependencies]
    wasm-bindgen = "0.2"
    wasm-bindgen-futures = "0.4.7"
    web-sys = "0.3.4"
    csv = "1.1"
    chrono = "0.4.38"
    reqwest = "0.12.5"
    serde = { version = "1.0", features = ["derive"] }
    serde-wasm-bindgen = "0.2"
    serde_json = "1.0"
    url = "2.5.2"
    yew = { version = "0.21.0", features = ["csr"] }
    js-sys = "0.3.4"
    mio = "0.8"

    [profile.release]
    lto = true
